src/objects/RelatedOpportunity__c.object
<CustomObject>
    <description>SFDC1-863; Related Opportunity Object is a Junction Object between Opportunities and Meeting Note</description>
    <fields>
        <fullName>Annualised1stYearAmount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualised 1st Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>MeetingNote__r.CreatedBy.FirstName +&quot; &quot;+ MeetingNote__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>MeetingNote__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MeetingNote__c</fullName>
        <label>Meeting Note</label>
        <referenceTo>MeetingNote__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDRelOpp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>RoP{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID RelOpp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <formula>MeetingNote__r.When__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <formula>MeetingNote__r.WhereFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Where</label>
        <type>Text</type>
    </fields>
    <label>Related Opportunity</label>
    <nameField>
        <displayFormat>RO-{000000000}</displayFormat>
        <label>Related Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>